--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
+    "center-it": "^1.1.3",
     "three": "^0.92.0",
     "three-orbit-controls": "^82.1.0",
     "vue": "^2.5.2",
