--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.2.0",
     "center-it": "^1.1.3",
+    "resource-loader": "^2.1.1",
     "three": "^0.92.0",
     "three-orbit-controls": "^82.1.0",
     "vue": "^2.5.2",
